# travis-gittub

./: .travis.yml  CMakeLists.txt  build.sh  main.cpp  resize.cpp
.github/workflows/: main.yml
